Add Spark 4 compatibility profile